# codex-oss-bundle

./: .gitattributes  README.md
.github/workflows/: oss-bundle-release.yml
codex-rs/: Cargo.toml
codex-rs/core/src/: codex.rs  config.rs  gpt_oss.rs  gpt_oss_prompt_120b.md  gpt_oss_prompt_20b.md  lib.rs  model_family.rs  model_provider_info.rs
codex-rs/core/src/tools/: parallel.rs  router.rs
codex-rs/core/tests/suite/: gpt_oss.rs  mod.rs
codex-rs/ollama/src/: lib.rs
codex-rs/oss-bundle/: Cargo.toml  README.md  build-all-platforms.sh  build-universal.sh  build.rs
codex-rs/oss-bundle/src/: embedded.rs  main.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: lib.rs  updates.rs
scripts/: codex-gpt-oss.sh  rebase-from-upstream.sh  run_gpt_oss_cpu.py  run_gpt_oss_mps_patched.py  transformers_mps_patched.py
